# Pvf_u

./: LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
benchmarks/: run_shape_game.py
scripts/: generate_figures.py  run_benchmark_suite.py
src/: __init__.py
src/config/: default_config.yaml
src/config/experiment_configs/: phase1_sovereign.yaml  phase2_porous.yaml  phase3_dyadic.yaml  phase4_ecosystem.yaml
src/core/: __init__.py  agent.py  valence.py
src/core/layers/: __init__.py  layer0_interoceptive.py  layer1_relational_gate.py
src/environment/: __init__.py  cooperative_navigation.py  dark_room.py  shape_game.py
src/models/: __init__.py  generative_model.py  variational.py
src/utils/: differential_privacy.py  knn_sparsification.py  metrics.py  stability.py
tests/: test_agent.py  test_layers.py  test_metrics.py
